[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "infragap"
version = "0.1.0"
description = "Infrastructure network connectivity diagnostics for policy analysts"
license = {text = "MIT"}
authors = [{name = "Vladimir Simic"}]
requires-python = ">=3.10"
dependencies = [
    "shapely>=2.0",
    "pyproj>=3.4",
    "networkx>=3.0",
    "pandas>=2.0",
    "openpyxl>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
